--- a/app/src/main/res/menu/menu_del_dia.xml
+++ b/app/src/main/res/menu/menu_del_dia.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item
-    android:id="@+id/salir"
-    android:icon="@drawable/ic_voz"
-    android:orderInCategory="1"
-    android:title="VOZ"
-    app:showAsAction="always|withText"
-    ></item>
+    <item
+        android:id="@+id/voz"
+        android:icon="@drawable/ic_voz"
+        android:orderInCategory="1"
+        android:title="VOZ"
+        app:showAsAction="always|withText"
+        ></item>
 
     <item
         android:id="@+id/buscar"
